--- a/style.css
+++ b/style.css
@@ -103,22 +103,24 @@ text-transform: uppercase;
     padding: 100px;
 
 }
-.watch p{
-    visibility: hidden;
-    position: absolute;
-    top: 40%;
-    right: 30%;
-}
-.watch:hover p{
-    visibility: visible;
-    position: absolute;
-    top: 40%;
-    right: 30%;
-   
-}
 .watch-now{
     position: relative;
-   
+    /* box-shadow: 2px 2px 2px 4px black; */
+}
+
+.watch{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* box-shadow: 2px 2px 2px 4px black; */
+}
+.watch-now:hover .watch{
+    display: block;
+    /* box-shadow: 2px 2px 2px 4px; */
+}
+.watch-now:hover{
+    box-shadow: 2px 2px 4px 8px black;
 }
 .online-games h1{
     font-size: 28px;
